--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create txt file
-        run: echo Text > test.txt
+        run: echo TextText > test.txt
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
