--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,17 +33,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          path: test.txt
-
-      - name: Commit to gh-pages branch
+      - name: Create orphan branch
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git checkout --orphan gh-pages
           git reset --hard
+
+      - name: Check file content
+        run: cat test.txt
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          path: test.txt
+
+      - name: Check file content
+        run: cat test.txt
+
+      - name: Commit to gh-pages branch
+        run: |
           git add test.txt
           git commit -m "Deploy documentation"
           git push origin gh-pages
