--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,12 @@ jobs:
 
       - name: Create txt file
         run: |
+          pwd
           mkdir docs
           cd docs
-          echo TextText > test.txt
+          echo TEXT > test.txt
           cd ..
+          pwd
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
@@ -50,7 +52,10 @@ jobs:
           path: docs/test.txt
 
       - name: Check file content
-        run: cat docs/test.txt
+        run: |
+          pwd
+          ls
+          cat docs/test.txt
 
       - name: Commit to gh-pages branch
         run: |
@@ -60,4 +65,3 @@ jobs:
 
       - name: Create .nojekyll file
         run: echo > .nojekyll
-
