--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,16 @@ jobs:
 
       - name: Create txt file
         run: |
-          pwd
-          mkdir artifact
-          cd artifact
+          mkdir build
+          cd build
           echo Text > test.txt
           echo Sample > sample.txt
           cd ..
-          pwd
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          path: artifact
+          path: build
 
   deploy:
 
@@ -50,18 +48,13 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
-          path: artifact
-
-      - name: Check file content
-        run: |
-          pwd
-          ls
+          path: build
 
       - name: Commit to gh-pages branch
         run: |
           git add artifact
           git commit -m "Deploy documentation"
-          git push origin gh-pages
+          git subtree push --prefix=build origin gh-pages
 
       - name: Create .nojekyll file
         run: echo > .nojekyll
