--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Commit to gh-pages branch
         run: |
-          git add artifact
+          git add build
           git commit -m "Deploy documentation"
           git subtree push --prefix=build origin gh-pages
 
