--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git checkout --orphan gh-pages
-          git pull origin gh-pages
+          git reset --hard
 
       - name: Download artifact
         uses: actions/download-artifact@v2
