--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,12 @@ jobs:
           name: artifact
           path: docs
 
+      - name: Create .nojekyll file
+        run: echo > .nojekyll
+
       - name: Commit to gh-pages branch
         run: |
-          git add docs
+          git add docs .nojekyll
           git commit -m "Deploy documentation"
           git push origin gh-pages
 
