--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create orphan branch
+      - name: Configure git user
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git checkout --orphan gh-pages
-          git pull origin gh-pages
+          
+      - name: Create orphan branch
+          if [ git ls-remote --heads origin gh-pages | grep gh-pages ]
+          then
+            git pull origin gh-pages
+          else
+            git checkout --orphan gh-pages
+          fi
 
       - name: Download artifact
         uses: actions/download-artifact@v2
