--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           
       - name: Create orphan branch
+        run: |
           if [ git ls-remote --heads origin gh-pages | grep gh-pages ]
           then
             git pull origin gh-pages
