--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
             git pull origin gh-pages
           else
             git checkout --orphan gh-pages
+            git reset --hard
           fi
 
       - name: Download artifact
