--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,16 +42,19 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git checkout --orphan gh-pages
+          git reset --hard
+          git commit --allow-empty -m "Init gh-pages branch"
           
-      - name: Create orphan branch
-        run: |
-          if git ls-remote --heads origin gh-pages | grep gh-pages
-          then
-            git pull origin gh-pages
-          else
-            git checkout --orphan gh-pages
-            git reset --hard
-          fi
+      # - name: Create orphan branch
+      #   run: |
+      #     if git ls-remote --heads origin gh-pages | grep gh-pages
+      #     then
+      #       git pull origin gh-pages
+      #     else
+      #       git checkout --orphan gh-pages
+      #       git reset --hard
+      #     fi
 
       - name: Download artifact
         uses: actions/download-artifact@v2
