--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python -c "import sys; print(sys.version)"
           pip install --upgrade pip wheel
-          pip install sqlalchemy testing.postgresql
+          pip install psycopg2-binary sqlalchemy testing.postgresql
 
       - name: Install PostGIS
         run: sudo apt-get install postgis
