added test codes

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ install_command =
     pip install --trusted-host pypi.python.org --trusted-host pypi.org --trusted-host files.pythonhosted.org {opts} {packages}
 deps =
     psycopg2-binary
+    sqlalchemy
     testing.postgresql
     coverage
 commands =
