--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ deps =
     testing.postgresql
     coverage
 commands =
-    coverage run --source=gsm -m unittest
+    coverage run -m unittest
     coverage report -m --skip-empty
