--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -36,9 +36,9 @@ jobs:
 
       - name: Install PostgreSQL and PostGIS
         run: |
-          sudo apt -y install postgresql-14 postgresql-client-14
-          sudo apt install postgis postgresql-14-postgis-3
-          sudo apt-get install postgresql-14-postgis-3-scripts
+          sudo apt -y install postgresql-12 postgresql-client-12
+          sudo apt install postgis postgresql-12-postgis-2.5
+          sudo apt-get install postgresql-12-postgis-2.5-scripts
 
       - name: Test PostgreSQL
         run : tox -e test
