--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Install PostgreSQL and PostGIS
         run: |
-          sudo apt install postgresql-12-postgis-3
+          sudo apt install postgresql
+          sudo apt install postgis
 
       - name: Test PostgreSQL
         run : tox -e test
