--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Install PostgreSQL and PostGIS
         run: |
+          sudo apt-get --purge remove postgresql
           sudo apt install postgresql
           sudo apt install postgis
 
