--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -39,5 +39,10 @@ jobs:
           sudo apt-get -y install postgresql-14
           sudo apt install postgis
 
+      - name: Display postgresql info
+        run: |
+          postgres -V
+          locate bin/postgres
+
       - name: Test PostgreSQL
         run : tox -e test
