--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -34,15 +34,8 @@ jobs:
           python -m pip install --upgrade pip wheel
           pip install tox tox-gh-actions
 
-      - name: Install PostgreSQL and PostGIS
-        run: |
-          sudo apt-get -y install postgresql-14
-          sudo apt install postgis
-
-      - name: Display postgresql info
-        run: |
-          psql --version
-          which psql
+      - name: Install PostgreSQL
+        run: sudo apt-get -y install postgresql
 
       - name: Test PostgreSQL
         run : tox -e test
