--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -38,7 +38,7 @@ jobs:
         run: sudo apt-get -y install postgresql
       
       - name: Check files
-        runrun: |
+        run: |
           ls
           cd usr
           ls
