--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -1,11 +1,21 @@
 name: build
 
 on:
-  [ "push", "pull_request"]
+  [ "push", "pull_request" ]
 
 jobs:
 
   build:
+
+    services:
+
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 5555:5555
 
     name: build
     runs-on: ubuntu-latest
@@ -33,25 +43,6 @@ jobs:
           python -c "import sys; print(sys.version)"
           python -m pip install --upgrade pip wheel
           pip install tox tox-gh-actions
-
-      - name: Install PostgreSQL
-        run: sudo apt-get -y install postgresql
-      
-      - name: Check files
-        run: |
-          cd ..
-          cd ..
-          ls
-          cd usr
-          ls
-          cd share
-          ls
-          cd postgresql
-          ls
-          cd 12
-          ls
-          cd extension
-          ls
 
       - name: Test PostgreSQL
         run : tox -e test
