--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -46,6 +46,12 @@ jobs:
 
       - name: Install PostGIS
         run: sudo apt-get install postgis
+      
+      - name: Find files with postgres
+        run: mdfind -name "postgres" | grep -G "postgres$"
+
+      - name: Check config
+        run: pg_config
 
       - name: Test PostgreSQL
         run : tox -e test
