--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -47,10 +47,10 @@ jobs:
       - name: Check PostgreSQL version
         run: sudo apt-cache search postgresql | grep postgresql
 
-      - name: Install PostgreSQL
-        run: |
-          sudo apt-get -y install postgresql-14
-          sudo apt-get install postgresql-server-dev-all
+      # - name: Install PostgreSQL
+      #   run: |
+      #     sudo apt-get -y install postgresql-14
+      #     sudo apt-get install postgresql-server-dev-all
 
       - name: Check psql
         run: psql --version
@@ -59,7 +59,7 @@ jobs:
         run: pg_config
 
       - name: Install PostGIS
-        run: sudo apt-get install postgis*
+        run: sudo apt-get install postgis postgresql-14-postgis-3-scripts
 
       - name: Check psql
         run: |
