--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Install PostgreSQL
         run: |
-          sudo apt-get --purge remove postgresql postgresql-12
-          sudo apt-get -y install postgresql-14
+          sudo apt-get --purge remove postgresql postgresql-*
+          sudo apt-get -y install postgresql
 
       - name: Check psql
         run: psql --version
