download build files to root

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: Sphinx documentation
-          path: docs/build
+          path: .
 
       - name: Create .nojekyll file
         run: echo > .nojekyll
