--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,6 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git fetch -a
 
       - name: Download artifact
         uses: actions/download-artifact@v2
@@ -77,7 +76,7 @@ jobs:
 
       - name: Commit to gh-pg branch
         run: |
-          git checkout -b --orphan gh-pg
+          git checkout --orphan gh-pg
           git add .
           git commit -m "Deploy documentation"
           git push origin gh-pg
