--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Delete all files in repo
-        run: rm -r ./*
-
       - name: Configure git user
         run: |
           git config user.name "${{ github.actor }}"
@@ -66,7 +63,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: Sphinx documentation
-          path: .
+          path: docs
 
       - name: Create .nojekyll file
         run: echo > .nojekyll
@@ -80,6 +77,6 @@ jobs:
       - name: Commit to gh-pg branch
         run: |
           git checkout --orphan gh-pg
-          git add .
+          git add docs .nojekyll
           git commit -m "Deploy documentation"
           git push origin gh-pg
