--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
       - name: Delete files
-        run: rm -r .
+        run: rm -r ./*
 
       - name: Download artifact
         uses: actions/download-artifact@v2
