--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,7 @@ jobs:
         run: |
           if git branch -a | grep -q -w "remotes/origin/gh-pg$";
           then git push origin -d gh-pg;
+          else echo 1;
           fi
 
       - name: Commit to gh-pg branch
