--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,9 +59,6 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Delete files
-        run: rm -r ./*
-
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
@@ -74,7 +71,7 @@ jobs:
       - name: Delete existing gh-pg branch
         run: |
           if git branch -a | grep -q -w "remotes/origin/gh-pg$";
-          then git push origin -d gh-pg;
+          then git branch -r -d origin/gh-pg;
           else echo 1;
           fi
 
