--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,8 +58,10 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git checkout --orphan gh-pg
+          git rm -rf .
+          git clean -fxd
           git reset --hard
+          git checkout --orphan gh-pg
           git commit --allow-empty -m "Init gh-pg branch"
           git push origin gh-pg
 
