--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,16 +58,14 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          ls
-          git rm -rf .
-          git clean -fxd
-          git reset --hard
-          ls
 
       - name: Orphan branch
         run: |
           ls
           git checkout --orphan gh-pg
+          git rm -rf .
+          git clean -fxd
+          git add -A
           git commit --allow-empty -m "Init gh-pg branch"
           git push origin gh-pg
           ls
