--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           git rm -rf .
           git clean -fxd
           git add -A
-          git commit --allow-empty -m "Init gh-pg branch"
+          git commit -m "Init gh-pg branch"
           git push origin gh-pg
           ls
 
