--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git checkout --orphan gh-pg
+          git pull origin gh-pg
 
       - name: Download artifact
         uses: actions/download-artifact@v2
