--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,8 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git pull gh-pg
+          git pull origin gh-pg
+          git reset --hard
 
       - name: Download artifact
         uses: actions/download-artifact@v2
