--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,3 +89,11 @@ jobs:
           git add .
           git commit -m "Deploy documentation"
           git push origin gh-pages
+
+      - name: Publish documentation
+        run: |
+          curl \
+            -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ env.GITHUB_REPOSITORY }}/pages \
+            -d '{"source":{"branch": "gh-pages","path": "docs"}}'
