--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,28 +51,24 @@ jobs:
 
     steps:
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
       - name: Configure git user
         run: |
+          git init
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Remove existing branch for github pages
+      - name: Create branch for github pages
         run: |
           git fetch
-          if git branch -r | grep "gh-pages$"; then git push -d origin gh-pages; fi
-          if git branch | grep "gh-pages$"; then git branch -D gh-pages; fi
-
-      - name: Initialse orphan branch for github pages
-        run: |
-          git checkout --orphan gh-pages
-          git rm -rf .
-          git clean -fxd
-          git add -A
-          git commit --allow-empty -m "Init gh-pages branch"
-          git push origin gh-pages
+          if git branch -r | grep "gh-pages$";
+          then \
+            git checkout gh-pages;
+          else \
+            git checkout gh-pages
+            git commit --allow-empty -m "Init gh-pages branch"
+            git push origin gh-pages;
+          fi
+          git pull origin ${{ github.head_ref }}
 
       - name: Download artifact
         uses: actions/download-artifact@v2
@@ -85,15 +81,6 @@ jobs:
 
       - name: Commit artifacts
         run: |
-          ls
           git add .
           git commit -m "Deploy documentation"
           git push origin gh-pages
-
-      - name: Publish documentation
-        run: |
-          curl \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ env.GITHUB_REPOSITORY }}/pages \
-            -d '{"source":{"branch": "gh-pages","path": "docs"}}'
