--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,27 +12,7 @@ jobs:
 
     steps:
 
-      - name: Check out repository
-        uses: actions/checkout@v2
-
-      - name: Install python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-
-      - name: Cache python dependecies
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install python dependecies
-        run: |
-          python -c "import sys; print(sys.version)"
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
+      - uses: workflows/setup@v1
 
       - name: Build documentation
         run: sphinx-build -E -W -b html ./docs/source ./docs/build
