--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -20,3 +20,9 @@ runs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
+    - name: Install python dependecies
+      run: |
+        python -c "import sys; print(sys.version)"
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+      shell: bash
